# space

./: .gitignore  Cargo.toml  README.md  local-setup.md
api/: Cargo.toml
api/src/: db.rs  guard.rs  lib.rs
api/src/graphql/: schema.rs
api/src/graphql/mutation/: bookable_resource.rs  login.rs  mod.rs  plan.rs  registration.rs
api/src/graphql/query/: map.rs  mod.rs  plan.rs
aws-utils/: Cargo.toml
aws-utils/src/: lib.rs
entity/: Cargo.toml
entity/src/: bookable_resource.rs  lib.rs  map.rs  plan.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230528_create_table.rs  m20230529_create_table.rs  m20230626_create_table.rs  main.rs  statements.rs
service/: Cargo.toml
service/src/: mutation.rs  query.rs
src/: main.rs
