[package]
name = "sea-orm-graphql-example"
authors = ["Aaron Leopold <aaronleopold1221@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "api", "service", "entity", "migration", "aws-utils"]

[dependencies]
axum = "0.6.18"
shuttle-axum = "0.19.0"
shuttle-runtime = "0.19.0"
tokio = "1.28.2"
graphql-api = { path = "./api" }
shuttle-secrets = "0.19.0"
thiserror = "1.0.40"
anyhow = "1.0.71"
