[package]
name = "graphql-example-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
google-oauth = "1.1.0"
thiserror = "1.0.40"
chrono = "0.4.26"

[dependencies.sea-orm]
version = "0.11.3" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
     "sqlx-postgres",
    # "sqlx-mysql",
#    "sqlx-sqlite",
]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
